--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ footer {
   background-color: #aaaaaa;
 }
 
-@media screen and (max-width:425px) {
+@media screen and (max-width:768px) {
   header {
     width: 100%;
   }
@@ -85,9 +85,11 @@ footer {
 
   .box:last-child {
     margin-bottom:0;
+    margin-right: auto;
 
   }
 
   footer {
     width:100%;
   }
+}
